@@ -1,8 +1,8 @@
 ############################################################################
 # arch/z16/src/Makefile
 #
-#   Copyright (C) 2008, 2011 Gregory Nutt. All rights reserved.
-#   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+#   Copyright (C) 2008, 2011-2012 Gregory Nutt. All rights reserved.
+#   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -69,7 +69,10 @@ VPATH		= chip:common
 
 ############################################################################
 # Targets
+
 all: $(HEAD_OBJ) libarch$(LIBEXT)
+
+.PHONY: board/libboard$(LIBEXT)
 
 $(HEAD_GENSRC) $(GENSRCS) : %$(ASMEXT): %.S
 	@$(CPP) $(CPPFLAGS) $< -o $@.tmp
